--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.13.2",
     "daisyui": "^5.5.8",
     "framer-motion": "^12.23.25",
+    "lucide-react": "^0.556.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
