--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-router-dom": "^7.10.1",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.5.1",
     "stripe": "^20.0.0",
     "tailwindcss": "^4.1.17",
     "yup": "^1.7.1"
