--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-toastify": "^11.0.5",
     "recharts": "^3.5.1",
     "stripe": "^20.0.0",
+    "sweetalert2": "^11.26.10",
     "tailwindcss": "^4.1.17",
     "yup": "^1.7.1"
   },
