--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lucide-react": "^0.556.0",
     "mongodb": "^7.0.0",
     "react": "^19.2.0",
+    "react-countdown": "^2.3.6",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.68.0",
     "react-hot-toast": "^2.6.0",
